# SillyVeggiesRemix

./: GAME_DESIGN.md  README.md  pyproject.toml
scripts/: smoke_runtime.py
src/sillyveggiesremix/: content.py  entities.py  gameplay.py  main.py  rendering.py  runtime.py  systems.py  world.py
