[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sillyveggiesremix"
version = "0.1.0"
description = "Doom-style farm dungeon lasso shooter prototype"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "pygame>=2.5.2"
]

[project.scripts]
sillyveggiesremix = "sillyveggiesremix.main:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
